add button styles

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,14 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
+.btn {
+  display: inline-block;
+  padding: 1rem 2rem;
+  background: #ccc;
+  border: unset;
+  border-radius: 5px;
+}
+.btn--danger {
+  background: red;
+  color: white;
+}
