--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,11 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
-.btn {
-  display: inline-block;
-  padding: 1rem 2rem;
-  background: #ccc;
-  border: unset;
-  border-radius: 5px;
+.header {
+  padding: 2rem;
+  background: #f2f2f2;
+  margin-bottom: 1rem;
 }
-.btn--danger {
-  background: red;
-  color: white;
+.nav__link {
+  margin: 0 1rem;
 }
